# ModelShelf

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  README.zh-TW.md  pyproject.toml
modelshelf/: __init__.py  cli.py  config.py  core.py  models.py  providers.py  tui.py
tests/: __init__.py  test_config.py  test_core.py  test_models.py
